[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f446ze", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

[profile.release]
debug = 2


[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "86c48dde4192cabcad22faa10cabb4dc5f035c0a" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "86c48dde4192cabcad22faa10cabb4dc5f035c0a" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "86c48dde4192cabcad22faa10cabb4dc5f035c0a" }
